Avoid white-space collapsing in |code|s

--- a/styles/sw.css
+++ b/styles/sw.css
@@ -1566,6 +1566,7 @@ figure.math {
 code, samp, pre.code {
   color: #800000;
   font-family: "Courier New", monospace;
+  white-space: pre-wrap;
 }
 
 .short code {
